--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# Build Output
+dist
+.next
+.vscode
+.DS_Store
+
+# Dependencies
 node_modules/
-*.log
+package-lock.json
+config.json
 variables.env
 variables.env.now
