--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "slugify": "^1.3.1",
-    "styled-components": "^3.4.6"
+    "styled-components": "^3.4.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.7.1"
