--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-google-maps": "^9.4.5",
     "slugify": "^1.3.1",
     "styled-components": "^3.4.6",
     "uuid": "^3.3.2"
