--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
     "mongoose": "^5.3.0",
     "mongoose-validators": "^0.1.0",
