--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.3",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.3.0",
+    "mongoose-mongodb-errors": "0.0.2",
     "mongoose-validators": "^0.1.0",
     "next": "^7.0.2",
     "nprogress": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-local-mongoose": "^5.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-google-maps": "^9.4.5",
