--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nprogress": "^0.2.0",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
+    "prismic-javascript": "^2.0.1",
+    "prismic-reactjs": "^0.3.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-google-maps": "^9.4.5",
