--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-mongodb-errors": "0.0.2",
     "mongoose-validators": "^0.1.0",
     "next": "^7.0.2",
+    "next-seo": "^1.8.0",
     "nprogress": "^0.2.0",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
